logs/lithium.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lithium'...
Listing './lib/python3.5/site-packages/lithium/blog'...
Listing './lib/python3.5/site-packages/lithium/blog/templates'...
Listing './lib/python3.5/site-packages/lithium/blog/templates/blog'...
Listing './lib/python3.5/site-packages/lithium/blog/templatetags'...
Listing './lib/python3.5/site-packages/lithium/conf'...
Listing './lib/python3.5/site-packages/lithium/contact'...
Listing './lib/python3.5/site-packages/lithium/contact/templates'...
Listing './lib/python3.5/site-packages/lithium/contact/templates/contact'...
Listing './lib/python3.5/site-packages/lithium/forum'...
Compiling './lib/python3.5/site-packages/lithium/forum/admin.py'...
***   File "./lib/python3.5/site-packages/lithium/forum/admin.py", line 40
    print forum.move(direction)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lithium/forum/templates'...
Listing './lib/python3.5/site-packages/lithium/forum/templates/forum'...
Listing './lib/python3.5/site-packages/lithium/views'...
Listing './lib/python3.5/site-packages/lithium/wiki'...
Listing './lib/python3.5/site-packages/lithium/wiki/migrations'...
Listing './lib/python3.5/site-packages/lithium/wiki/templates'...
Listing './lib/python3.5/site-packages/lithium/wiki/templates/wiki'...
Compiling './lib/python3.5/site-packages/lithium/wiki/views.py'...
***   File "./lib/python3.5/site-packages/lithium/wiki/views.py", line 87
    raise Http404, "No page found matching the query"
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lithium-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
